优化重构智投系统token获取和用户解绑业务逻辑代码